--- a/mcdonalds.html
+++ b/mcdonalds.html
@@ -136,6 +136,46 @@
 
         </section><!-- section -->
 
+        <footer id="footer" class="clear_fix">
+            <div class="foot_inner">
+                <!-- 1168 가운데 정렬 -->
+                <ul class="f_menu">
+                    <li><a href="#" class="yellow">개인정보 처리방침</a></li>
+                    <li><a href="#">위치정보 이용약관</a></li>
+                    <li><a href="#">사이트맵</a></li>
+                    <li><a href="#">임차문의</a></li>
+                    <li><a href="#">고객문의</a></li>
+                    <li><a href="#">인재채용</a></li>
+                </ul> <!-- f_menu -->
+
+                <ul class="info">
+                    <li>한국맥도날드(유)</li>
+                    <li>대표이사: 김기원</li>
+                    <li>사업자등록번호: 101-81-26409</li>
+                    <li>전화주문: 1600-5252</li>
+                    <li>COPYRIGHT © 2019 ALL RIGHTS RESERVED BY McDonald's.</li>
+                </ul> <!-- info -->
+
+                <ul class="sns">
+                    <li class="sns_1"><a href="#">이미지</a></li>
+                    <li class="sns_2"><a href="#">이미지</a></li>
+                    <li class="sns_3"><a href="#">이미지</a></li>
+                    <li class="sns_4"><a href="#">이미지</a></li>
+                    <li class="sns_5"><a href="#">이미지</a></li>
+                </ul>
+            </div>
+        </footer> <!-- footer -->
+        
+
+        <div class="top">
+            <!-- 포지셔닝 -->
+            <div class="pos">
+                <a href="#"><img src="images/btn_story_04.png" alt="btn_story1"></a>
+                <a href="#"><img src="images/btn_delivery_04.png" alt="delivery"></a>
+                <a href="#wrap"><img src="images/btn_top_04.png" alt="top"></a>
+            </div>
+
+        </div><!-- top -->
 
 
     </div><!-- wrap -->
